# NRF52840-Sandbox

./: ws.code-workspace
blinky/src/: main.c
esb_prx/: prj.conf
esb_prx/src/: main.c
esb_ptx/src/: main.c
libraries/prop_rf/: CMakeLists.txt  Kconfig  prop_rf.c  prop_rf.h  prop_rf_dppi.c  prop_rf_ppi.c
prop_rf_ptx/: CMakeLists.txt  prj.conf
prop_rf_ptx/src/: main.c
usb_console/: prj.conf
usb_console/src/: main.c
